kind/dev-pods/dev-test/deny-aman.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all
  namespace: dev-aman
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
